src/objects/Apttus_Base2__BasePrivateProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to define base properties</description>
    <fields>
        <fullName>Apttus_Base2__EnableUsageData__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable Usage Data</description>
        <inlineHelpText>Enable Usage Data</inlineHelpText>
        <label>Enable Usage Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__UsageDataEndpoint__c</fullName>
        <defaultValue>&quot;https://data.analytics.apttus.com/api/v1/metadata/account/custom/value?create=true&quot;</defaultValue>
        <description>Usage data endpoint</description>
        <inlineHelpText>Usage data endpoint</inlineHelpText>
        <label>Usage Data Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__UsageDataKey__c</fullName>
        <defaultValue>&quot;00a56a1e-8089-4437-7efb-a99f59189b93&quot;</defaultValue>
        <description>Usage data key</description>
        <inlineHelpText>Usage data key</inlineHelpText>
        <label>Usage Data Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__UsageDataProviderClass__c</fullName>
        <defaultValue>&quot;Apttus_Config2.UsageDataImplementation&quot;</defaultValue>
        <description>List of Usage Data provider class names, separated by comma. The class should implement the Apttus_Base2.IUsageData interface.</description>
        <inlineHelpText>List of Usage Data provider class names, separated by comma. The class should implement the Apttus_Base2.IUsageData interface.</inlineHelpText>
        <label>Usage Data Provider Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__UsageEventKey__c</fullName>
        <defaultValue>&quot;dd56818f-5d18-41d9-6191-82958113d295&quot;</defaultValue>
        <description>Usage integration key</description>
        <inlineHelpText>Usage integration key</inlineHelpText>
        <label>Usage Event Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Base Private Properties</label>
</CustomObject>